fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ main {
     position: relative;
     width: clamp(320px, 100%, 1920px);
     display: flex;
+    margin: 0;
 
     box-shadow: 5px 0px 3px -3px rgba(0, 0, 0, 0.1),
                 -5px 0px 3px -3px rgba(0, 0, 0, 0.1);
@@ -72,7 +73,7 @@ main {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    padding: 50px 40px;
+    padding: 0px 40px;
     box-shadow: 5px 0px 3px -3px rgba(0, 0, 0, 0.1),
                 -5px 0px 3px -3px rgba(0, 0, 0, 0.1);
 
@@ -82,25 +83,22 @@ main {
 .section-title {
     font-weight: 500;
     font-size: 1.8em;
-    margin-bottom: 40px;
+    margin: 5rem 0;
     color: #484848;
-
     /* border: 1px solid red; */
-
 }
 
 .carousel-container {
     /* overflow-x: hidden; */
     position: relative;
-
     display: flex;
     justify-content: flex-start; 
     align-items: center;
 
     /* width: calc(100% + 800px); */
+    margin-top: 0;
     margin-right: -3200px;
-    padding: 2rem 0;
-    
+    /* padding: 2rem 0; */
     /* border: 1px solid green; */
 }
 
