--- a/src/styles/JoinMember.css
+++ b/src/styles/JoinMember.css
@@ -2,6 +2,8 @@
     position: absolute;
     top: 200vh;
     width: clamp(320px, 100%, 1920px);
+    box-shadow: 5px 0px 3px -3px rgba(0, 0, 0, 0.1),
+    -5px 0px 3px -3px rgba(0, 0, 0, 0.1);
 
     height: 80vh;
     display: flex;
